      is the test itself.
    - Rename test suite commands to be prefixed with «c-» instead of «t-».
    - Add new dpkg-source functional tests.
    - Add new dpkg-buildpackage functional tests.
    - Add an initial functional test suite for dpkg-deb and dpkg-split.
    - Skip the involved tests if IO::String is missing.
    - Add new unit test for libdpkg error handling.
  * Build system:
    - Add support for profiling perl modules.
    - Clean up compiler and linker automatic flag usage in configure.
    - Fix the __progname check to avoid the optimizer discarding the symbol.
    - Fix M4sh/Autoconf coding style. Add a new section to coding-style.txt
      describing M4sh/Autoconf.
    - Disable C++ exceptions for dselect.
    - Fix typo in SE Linux library detection code, only affecting static
      mode (not used in Debian). Regression introduced in dpkg 1.18.8.
    - Change --with-* option logic to default to check.
    - Disable -Wtautological-constant-out-of-range-compare (for clang).
    - Check the availability of -W<warning> variant instead of -Wno-<warning>.
      As at least gcc and clang do not warn on -Wno-* warning flags, only
      when some unrelated warning needs to be emitted.
    - Bump po4a version to 0.43 (we are using --porefs wrap option).
    - Add support for running the test suite in parallel.
    - Specify exec argument for TAP::Harness to gracefully handle non-perl
      executables with older versions of the module.
    - Require libselinux 2.0.99 for baseline API, remove static linking
      support, use pkg-config unconditionally, and perform refinement checks
      only if available.
    - Check for the required minimal perl version.
    - Use builddir instead of CURDIR in man Makefile.am.
    - Use cp with -R instead of -r (the former is more portable and not
      marked as deprecated by POSIX).
    - Print an actual newline instead of a literal \n in lcov output.
    - Do not honor DPKG_DATADIR on the installed Dpkg module.