@@ -31,7 +31,11 @@ my $datadir = "$srcdir/t/mk";
 # directory with «make -C».
 $ENV{$_} = rel2abs($ENV{$_}) foreach qw(srcdir DPKG_DATADIR DPKG_ORIGINS_DIR);
 
-# Delete variables that can affect the tests.
+# Any paralellization from the parent should be ignored, we are testing
+# the makefiles serially anyway.
+delete $ENV{MAKEFLAGS};
+
+# Delete other variables that can affect the tests.
 delete $ENV{$_} foreach grep { m/^DEB_/ } keys %ENV;
 
 $ENV{DEB_BUILD_PATH} = rel2abs($datadir);
