@@ -151,6 +151,7 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
     - Add an initial functional test suite for dpkg-deb and dpkg-split.
     - Skip the involved tests if IO::String is missing.
     - Add new unit test for libdpkg error handling.
+    - Delete MAKEFLAGS environment variable when testing make invocations.
   * Build system:
     - Add support for profiling perl modules.
     - Clean up compiler and linker automatic flag usage in configure.
